Redirections of classes and screens modifications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="congratulations">Congratulations!</string>
     <string name="generatecode">Code Applies for the next 24 hours</string>
     <string name="Completed">Return to homepage</string>
+    <string name="licenseplate">License Plate Number</string>
     <string name="findYour">Find your</string>
     <string name="signIn">Sign In</string>
     <string name="noAccount">Don\'t have an account?</string>
