--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="generatecode">Code Applies for the next 24 hours</string>
     <string name="Completed">Return to homepage</string>
     <string name="licenseplate">License Plate Number</string>
+    <string name="scanLPR">Scan License Plate Number</string>
     <string name="findYour">Find your</string>
     <string name="signIn">Sign In</string>
     <string name="noAccount">Don\'t have an account?</string>
